# tiny-update-check

./: .changie.yaml  .commitlintrc.json  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  codecov.yml  commit-types.json  deny.toml  dist-workspace.toml  hk.pkl  justfile  mise.toml  release-plz.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.changes/: v0.1.0.md  v0.1.1.md  v1.0.0.md  v1.1.0.md  v1.1.1.md  v1.1.2.md  v1.1.3.md
.changes/unreleased/: Added-message-support.yaml  Added-response-body-feature.yaml  Changed-20260308-113618.yaml  Dependencies-20260305-124358.yaml  Dependencies-20260305-124359.yaml  Dependencies-20260308-113619.yaml  Dependencies-20260308-113620.yaml  Dependencies-20260314-034300.yaml  Dependencies-20260421-181304.yaml  Fixed-20260308-113617.yaml  Security-20260421-153232.yaml
.claude/: settings.local.json
.claude/skills/changelog/: SKILL.md
.github/: copilot-instructions.md  dependabot.yml
.github/actions/install-tools/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: audit.yml  auto-tag.yml  binary-size.yml  build.yml  changie-release.yml  ci.yml  commit-lint.yml  coverage.yml  pr.yml  publish.yml  release-plz.yml  release.yml  test.yml
benches/: benchmark.rs
docs/plans/: 2026-02-03-1.0-release-design.md
examples/: async_usage.rs  basic.rs  size_check.rs  size_check_rustls.rs
metrics/: binary-size.txt  bloat-native-tls.txt  bloat-rustls.txt
scripts/: check-configs-sync.py  generate-cliff-configs.py  generate-commitlint-config.py
src/: async.rs  lib.rs
tests/: async_check.rs  integration.rs  parsing.rs  prerelease.rs  validation.rs
tests/fixtures/: compact.json  escaped_chars.json  missing_crate.json  missing_version.json  nested_version.json  null_version.json  pretty.json  serde_response.json  spaced_colon.json
