[package]
name = "tiny-update-check"
version = "1.1.2"
edition = "2024"
rust-version = "1.87"
authors = ["Tyler Butler <tyler@tylerbutler.com>"]
description = "A minimal, lightweight crate update checker for Rust CLI applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tylerbutler/tiny-update-check"
homepage = "https://github.com/tylerbutler/tiny-update-check"
documentation = "https://docs.rs/tiny-update-check"
keywords = ["cli", "update", "version", "crates-io", "notification"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
semver = "1.0.27"
minreq = { version = "=3.0.0-rc.0", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }
reqwest = { version = "0.13.2", optional = true, default-features = false, features = ["rustls"] }

[features]
default = ["native-tls", "do-not-track"]
native-tls = ["minreq/https-native-tls"]
rustls = ["minreq/https-rustls"]
async = ["reqwest"]
do-not-track = []
response-body = []

[[example]]
name = "async_usage"
required-features = ["async"]

[dev-dependencies]
temp-env = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dist]
inherits = "release"
lto = "thin"

[profile.profiling]
inherits = "release"
debug = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
