[package]
name = "tiny-update-check"
version = "1.1.3"
edition = "2024"
rust-version = "1.87"
authors = ["Tyler Butler <tyler@tylerbutler.com>"]
description = "A minimal, lightweight crate update checker for Rust CLI applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tylerbutler/tiny-update-check"
homepage = "https://github.com/tylerbutler/tiny-update-check"
documentation = "https://docs.rs/tiny-update-check"
keywords = ["cli", "update", "version", "crates-io", "notification"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
semver = "1.0.27"
# native-tls feature only: minreq + system TLS produces the smallest binary (~540 KB).
# minreq's https-rustls uses aws-lc-rs, which adds ~1.7 MB; ureq is used for rustls instead.
minreq = { version = "=3.0.0-rc.1", default-features = false, optional = true }
# rustls feature only: ureq's rustls uses ring rather than aws-lc-rs, keeping the binary small.
# minreq's https-rustls would add ~1.7 MB due to aws-lc-rs; ureq avoids this.
ureq = { version = "3.3.0", default-features = false, optional = true }
serde_json = { version = "1", default-features = false, features = ["std"] }
reqwest = { version = "0.13.3", optional = true, default-features = false, features = ["rustls"] }

[features]
default = ["native-tls", "do-not-track"]
# Uses minreq + system TLS. Smallest binary (~540 KB). Mutually exclusive with `rustls`.
native-tls = ["dep:minreq", "minreq/https-native-tls"]
# Uses ureq + rustls/ring. Pure-Rust TLS, no system dependencies. Mutually exclusive with `native-tls`.
rustls = ["dep:ureq", "ureq/rustls"]
async = ["reqwest"]
do-not-track = []
response-body = []

[[example]]
name = "async_usage"
required-features = ["async"]

[dev-dependencies]
temp-env = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dist]
inherits = "release"
lto = "thin"

[profile.profiling]
inherits = "release"
debug = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
